# kas-fastmcp

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  config.py  databases.yaml  databases.yaml.example  main.py  notion_server.py  pyproject.toml  requirements.txt  sync-schemas.sh
connection_testing/: test_connection.py
docs/: CHANGELOG.md  SCHEMA_SYNC.md
notion_server/: __init__.py  deps.py  server.py
notion_server/core/: __init__.py  client.py  formatters.py  schema.py
notion_server/tools/: __init__.py  content.py  notion_api.py  pages.py  query.py  resources.py  schema_sync.py
notion_server/utils/: __init__.py  validators.py
scripts/: quick_sync.py  sync_schemas.py
tools/: __init__.py  notion_api.py
tools/connection_testing/: token_verification.py
