[project]
name = "kas-fastmcp"
version = "0.1.0"
description = "Kas MCP Server — modular AI and Notion assistant tools."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Miras Kasymkhan", email = "miras@kascurated.com" }
]

dependencies = [
    "fastmcp>=3.0.0b1",
    "httpx>=0.27.2",
    "pydantic>=2.7.1",
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "openai>=1.35.0",
    "langchain>=0.2.0",
    "pyyaml>=6.0.1"
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notion_server", "tools", "config.py", "main.py"]

[tool.fastmcp]
# Optional section for MCP Cloud — describes your server entrypoint
entrypoint = "notion_server:server"
description = "Kas FastMCP server for Notion logging and AI tools"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.black]
target-version = ["py310"]
line-length = 88
